diagnostic_log.txt
  File "C:\Users\chris\Desktop\\u0391\u03a0\u039f\u0394\u0395\u0399\u039e\u0397 \u039a\u0391\u0399 \u0392\u0395\u0392\u0391\u0399\u03a9\u03a3\u0397 \u0399\u0391\u039d\u039f\u03a5\u0391\u03a1\u0399\u039f\u03a5-\u03a6\u0395\u0392\u03a1\u039f\u03a5\u0391\u03a1\u0399\u039f\u03a5\freelancer-bot\diagnostic_all.py", line 62
    data["server_webhook_test"] = run(f"curl -s -X POST http://127.0.0.1:10000/{secret} -d '{}' -H 'Content-Type: application/json'")
                                                                                                                                    ^
SyntaxError: f-string: empty expression not allowed
